# ComfyUI-Krea2TextEncoder

./: LICENSE  README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
web/: krea2_dynamic_images.js
